--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 # Copy from .env.local on the Vercel dashboard
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+POSTGRES_URL="postgres://default:AdFRp2r5KsuY@ep-bold-glitter-a4j7j7c8-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:AdFRp2r5KsuY@ep-bold-glitter-a4j7j7c8-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:AdFRp2r5KsuY@ep-bold-glitter-a4j7j7c8-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:AdFRp2r5KsuY@ep-bold-glitter-a4j7j7c8.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-bold-glitter-a4j7j7c8-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="AdFRp2r5KsuY"
+POSTGRES_DATABASE="verceldb"
 
 # `openssl rand -base64 32`
 AUTH_SECRET=
