--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ POSTGRES_PASSWORD="AdFRp2r5KsuY"
 POSTGRES_DATABASE="verceldb"
 
 # `openssl rand -base64 32`
-AUTH_SECRET=
+AUTH_SECRET=wpi328pZ0xYH1+PmKfytvbqSUxRKyvdSJVa+2e6WpdI=
 AUTH_URL=http://localhost:3000/api/auth
